# mlops-course

./: .gitignore  .pre-commit-config.yaml  data.dvc  pyproject.toml  run_server.py  train.py
.dvc/: config
configs/: mlflow.yaml  model.yaml  preprocessing.yaml  train.yaml
mlops_course/: infer.py  train.py
